--- a/index_v.html
+++ b/index_v.html
@@ -25,7 +25,7 @@
         <h1 id="lonon-logo">
             <img src="./images/logo-m.jpg" alt="">
             <br>
-            <a href="#">朱 兵<span>PHP 开发工程师</span>
+            <a href="#">朱 兵<span>PHP工程师</span>
             </a>
         </h1>
         <!-- Menu -->
@@ -36,7 +36,7 @@
                 </li>
                 <li><a href="#workExperience">工作经历</a></li>
                 <li><a href="#projectExperience">项目经历</a></li>
-                <li><a href="#educationExperience">教育经历</a></li>
+                <li><a href="#educationExperience">学习经历</a></li>
                 <li><a href="#selfEvaluation">自我评价</a></li>
                 <li><a href="#skills">个人技能包</a></li>
             </ul>
@@ -58,7 +58,7 @@
                 </li>
                 <li title="查看二维码" data-container="body" data-toggle="popover" data-placement="top"
                     data-content="点击查看简历二维码？">
-                    <a class="resume-qrcode-btn" href="javascript:void(0);" target="_blank">
+                    <a class="resume-qrcode-btn" href="javascript:void(0);">
                         <i class="ti-share font-14px gray-icon"></i>
                     </a>
                 </li>
@@ -109,9 +109,10 @@
                         <h3 class="lonon-about-heading">朱 兵</h3>
                         <p>大型上线项目后端、商城网站、高并发在线h5活动后端、服务器管理经验</p>
                         <p>php工程师 · 土流集团</p>
-                        <p>男 ︳ 27岁 ︳大专 ︳ 5年php开发工作经验 ︳ 长沙</p>
+                        <p>男 ︳ 27岁 ︳ 未婚  ︳ 大专 ︳ 5年php开发工作经验 ︳ 长沙</p>
                         <p>联系方式: <a href="tel:13467898157">13467898157(张家界)</a> <a href="tel:19173160216">19173160216(长沙)</a></p>
                         <p>期望福利：五险一金，双休，可接受常规加班</p>
+                        <p>期望薪资：12k~15k</p>
                         <p>目前在职 面试双方满意后，可在一个月内到岗</p>
 
                         <div>
@@ -120,12 +121,13 @@
                                 <p></p>
                                 <p>面试，不做面试题，不回答基础理论知识，若有需求，可结合业务实现</p>
                                 <p>不是很喜欢(不擅长)说，会的都写出来了</p>
+                                <p>未在大型项目中，使用过redis/swoole</p>
                             </div>
                         </div>
 
                         <div class="cardvisit">
                             <h3>朱 兵</h3>
-                            <span>PHP 开发工程师</span>
+                            <span>PHP 工程师</span>
                             <div class="divider-line"></div>
                             <p>
                                 <i class="ti-face-smile"></i>
@@ -159,62 +161,58 @@
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                         <div class="lonon-quote-card">
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
-                            <div>
-                                <div class="work-experience-title">工作内容：</div>
-                                <ol class="work-experience-content">
-                                    <li>燕子到家项目： 集外卖、跑腿、团购功能为一体，负责相关业务模块接口开发、支付相关接口开发、结算模块相关功能开发，与app和h5端对接、联调</li>
-                                    <li>住宅在线项目：负责住宅在线项目迭代业务模块接口开发，支付模块开发，与app和h5端对接、联调</li>
-                                </ol>
-                            </div>
-                            <h5>
-                                <strong>php工程师</strong>
-                            </h5>
-                            <p class="occupation">土流集团有限公司</p>
-                            <p>任职时间：2019.08-至今</p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-                        <div class="lonon-quote-card">
-                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
-                            <div>
-                                <div class="work-experience-title">工作内容：</div>
-                                <ol class="work-experience-content">
-                                    <li>外包项目：负责公司的对外服务项目后端开发，主要是商城和应用型平台</li>
-                                    <li>自有项目开发：一共完成了5个项目，并在项目中承担php主要开发工作，项目有快转集客版、快转平台、群小宝、鲤券、美股实时报等</li>
-                                </ol>
-                            </div>
-                            <h5>
-                                <strong>php工程师</strong>
-                            </h5>
-                            <p class="occupation">湖南易达客科技有限公司 </p>
-                            <p>任职时间：2018.03-2019.08</p>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-                        <div class="lonon-quote-card">
-                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="work-experience-box">
-                                <div class="work-experience-title">工作内容：</div>
-                                <ol class="work-experience-content">
-                                    <li>负责公司的h5互动游戏开发、测试、运维、数据处理。公司h5活动基于微信公众号和用户社交圈开展（湖南移动、长沙移动、株洲移动、娄底移动等）</li>
-                                    <li>活动运营平台开发，围绕h5活动做的平台，目的使h5活动开发模块化，提高开发效率</li>
-                                    <li>参与需求分析讨论，在活动、项目需求讨论会时，对产品经理所提交的需求进行分析以及技术补充，使方案更合理</li>
-                                    <li>微信公众号/小程序的各类接口开发与应用</li>
-                                    <li>在各类活动上线过程中组织与甲方进行沟通</li>
-                                </ol>
+                                <div class="work-experience-top">
+                                    <h5>
+                                        <strong>php工程师</strong>
+                                    </h5>
+                                    <p class="occupation">土流集团有限公司</p>
+                                    <p>任职时间：2019.08-至今</p>
+                                </div>
+
+                                <div>
+                                    <div class="work-experience-title">工作内容：</div>
+                                    <ol class="work-experience-content">
+                                        <li>燕子到家项目： 集外卖、跑腿、团购功能为一体，负责相关业务模块接口开发、支付相关接口开发、结算模块相关功能开发，与app和h5端对接、联调</li>
+                                        <li>住宅在线项目：负责住宅在线项目迭代业务模块接口开发，支付模块开发，与app和h5端对接、联调</li>
+                                    </ol>
+                                </div>
                             </div>
-                            <h5>
-                                <strong>php工程师</strong>
-                            </h5>
-                            <p class="occupation">北京畅游世纪科技有限公司湖南分公司 </p>
-                            <p>任职时间：2016.5-2018.03</p>
                         </div>
                     </div>
 
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                         <div class="lonon-quote-card">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
+
+                            <div class="work-experience-box">
+                                <div class="work-experience-top">
+                                    <h5>
+                                        <strong>php工程师</strong>
+                                    </h5>
+                                    <p class="occupation">湖南易达客科技有限公司/北京畅游世纪科技有限公司湖南分公司</p>
+                                    <p>任职时间：2016.5-2019.08</p>
+                                </div>
+
+                                <div>
+                                    <div class="work-experience-title">工作内容：</div>
+                                    <ol class="work-experience-content">
+                                        <li>负责公司的h5互动游戏开发、测试、运维、数据处理。公司h5活动基于微信公众号和用户社交圈开展（湖南移动、长沙移动、株洲移动、娄底移动等）</li>
+                                        <li>活动运营平台开发，围绕h5活动做的平台，目的使h5活动开发模块化，提高开发效率</li>
+                                        <li>参与需求分析讨论，在活动、项目需求讨论会时，对产品经理所提交的需求进行分析以及技术补充，使方案更合理</li>
+                                        <li>微信公众号/小程序的各类接口开发与应用</li>
+                                        <li>在各类活动上线过程中组织与甲方进行沟通</li>
+                                        <div>&nbsp;</div>
+                                        <li>外包项目：负责公司的对外服务项目后端开发，主要是商城和应用型平台</li>
+                                        <li>自有项目开发：一共完成了5个项目，并在项目中承担php主要开发工作，项目有快转集客版、快转平台、群小宝、鲤券、美股实时报等</li>
+                                    </ol>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card" style="display: none;">
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="work-experience-box">
                                 <div class="work-experience-title">工作内容：</div>
@@ -251,7 +249,7 @@
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div>
                                 <div class="work-experience-title">锦绣世界商城等多个商城类外包项目</div>
-                                <ol class="work-experience-content">
+                                <ol class="work-experience-content bar-title">
                                     <li>项目介绍：甲方高度定制类商城项目，根据甲方的具体需求完成项目研发</li>
                                     <li>核心功能点：会员系统、商品、订单、团购、秒杀</li>
                                     <li>项目运行环境：nginx、ecs|rds、静态资源七牛云CDN加速</li>
@@ -270,7 +268,7 @@
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div>
                                 <div class="work-experience-title">湖南7个地市移动的微信公众号运维</div>
-                                <ol class="work-experience-content">
+                                <ol class="work-experience-content bar-title">
                                     <li>项目介绍：负责长沙移动等7个地市移动微信公众号的h5活动与运维</li>
                                     <li>核心功能点：会员系统、金币（积分）系统、物料宣传管理系统、宽带预约系统、每月定期的h5活动开发等</li>
                                     <li>项目运行环境：nginx、ecs|rds、静态资源七牛云CDN加速</li>
@@ -289,7 +287,7 @@
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div>
                                 <div class="work-experience-title">鲤券</div>
-                                <ol class="work-experience-content">
+                                <ol class="work-experience-content bar-title">
                                     <li>项目介绍：一款围绕商家做优惠券分发的工具</li>
                                     <li>核心功能点：商家管理，优惠券管理，活动管理，多层分享逻辑；</li>
                                     <li>项目运行环境：nginx、ecs|rds、静态资源七牛云CDN加速</li>
@@ -308,7 +306,7 @@
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div>
                                 <div class="work-experience-title">快转</div>
-                                <ol class="work-experience-content">
+                                <ol class="work-experience-content bar-title">
                                     <li>项目介绍：一款基于微信的推广营销管理工具，支持PC和手机端 多用户管理，企业微信员工同步</li>
                                     <li>核心功能点：员工管理、活动管理、公众号管理、营销插件管理等</li>
                                     <li>项目运行环境：nginx、ecs|rds、静态资源七牛云CDN加速</li>
@@ -327,13 +325,13 @@
 
         <div class="divider1"></div>
 
-        <!-- 教育经历 -->
+        <!-- 学习经历 -->
         <div class="lonon-clients" id="educationExperience">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
-                        <span class="heading-meta style-1">教育经历</span>
-                        <h2 class="lonon-heading animate-box" data-animate-effect="fadeInLeft">教育经历</h2>
+                        <span class="heading-meta style-1">学习经历</span>
+                        <h2 class="lonon-heading animate-box" data-animate-effect="fadeInLeft">学习经历</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -344,7 +342,7 @@
                                 <strong>本科 · 计算机应用(网络教育)</strong>
                             </h5>
                             <p class="occupation">中国地质大学(武汉)</p>
-                            <p>2021年毕业</p>
+                            <p>2021年上半年毕业</p>
                         </div>
                     </div>
 
@@ -363,7 +361,7 @@
                         <div class="lonon-quote-card">
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <h5>
-                                <strong>php培训</strong>
+                                <strong>php项目实践</strong>
                             </h5>
                             <p class="occupation">长沙源码信息技术有限公司 (地点：长沙)</p>
                             <p>2015.10-2016.3</p>
@@ -393,7 +391,7 @@
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                         <div class="lonon-quote-card">
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
-                            <ol class="work-experience-content">
+                            <ol class="work-experience-content bar-title">
                                 <li>善于思考问题，专业基础知识扎实。在学习中注重理论和实践的结合</li>
                                 <li>对互联网编程有着浓厚的兴趣，具有较强的学习能力，适应能力强，可以迅速吸收和运用技能知识和业务场景</li>
                                 <li style="display: none;">在之前的的工作中也是认真负责，能够很好的跟客户交流沟通并且了解、执行到位客户的需求</li>
@@ -460,7 +458,7 @@
                             <div class="lonon-quote-card">
                                 <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                                 <div class="bar-title">
-                                    <div>php开发框架</div>
+                                    <div>php框架</div>
                                     <div class="work-experience-content">
                                         <div>
                                             <div>精通thinkphp框架</div>
@@ -471,8 +469,8 @@
                                         <div>
                                             <div>精通laravel框架</div>
                                             <ol>
-                                                <li>在土流网工作期间 使用 laravel框架(5.2、5.8) 做相关业务支持，(两天框架和项目熟悉上手)</li>
-                                                <li>做过一些典型功能：如 极光推送、视图组合器(viewComposer)、支付、消息队列</li>
+                                                <li>在土流网工作期间 使用 laravel框架(5.2、5.8) 做相关业务支持</li>
+                                                <li>做过一些典型功能：如 极光推送、支付、消息队列/通知</li>
                                             </ol>
                                         </div>
                                     </div>
@@ -500,7 +498,7 @@
                                 <div class="bar-title">
                                     <div>开发工具</div>
                                     <ol>
-                                        <li>目前使用phpstorm做php代码编写，以及 svn/ftp管理</li>
+                                        <li>目前使用phpstorm做php代码编写，以及 git/svn/ftp管理</li>
                                         <li>代码编写、协同(svn)、上传(ftp)、命令行测试等 均在 phpstorm 上完成，可节省软件切换和文件查找时间，提升工作效率</li>
                                     </ol>
                                 </div>
@@ -517,14 +515,14 @@
                                             <div>swoole</div>
                                             <ol>
                                                 <li>目前未使用 该扩展做过大型项目，只是使用了长连接、多线程异步任务、异步通知的特性在具体业务中做辅助</li>
-                                                <li>其他操作接口没有具体业务使用到，没做相关了解</li>
+                                                <li>其他操作接口没有具体业务使用到</li>
                                             </ol>
                                         </li>
                                         <li>
                                             <div>redis</div>
                                             <ol>
                                                 <li>目前只使用 该扩展做过高访问量的数据缓存(数据查询缓存)，以及登录信息缓存(session共享)</li>
-                                                <li>其他操作接口或数据类型没有具体业务使用到，没做相关了解</li>
+                                                <li>其他操作接口或数据类型没有具体业务使用到</li>
                                             </ol>
                                         </li>
                                         <li>
@@ -546,8 +544,7 @@
                                     <div>前端框架和组件</div>
                                     <ol class="work-experience-content">
                                         <li>熟悉jquery、vuejs 、(vant，element)等前端框架和组件</li>
-                                        <li>在之前的工作中，也会写一些前端的代码，所以对前端的技能也有所了解和使用</li>
-                                        <li>可独立完成基于 html css js(jquery) 的网站开发</li>
+                                        <li>可独立完成基于 html css javascript 的网站开发</li>
                                         <li>由于业务需要 了解了vuejs以及和vue相关的组件(vant\element)</li>
                                     </ol>
                                 </div>
